#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
#

TAG: pwi-6-0-23-17
DATE: 03/13/2024
STAFF: lec
wts2-1438/fl2-781/deselect function in probe module

TAG: pwi-6-0-23-16
DATE: 02/23/2024
STAFF: lec
add cache/pip removal to Install for bhmgipwi01lp, bhmgipwi01lt

TAG: pwi-6-0-23-15
DATE: 02/22/2024
STAFF: lec
wts2-1415/fl2-754/Saving Problem in Assay Module

TAG: pwi-6-0-23-14
DATE: 02/19/2024
STAFF: lec
fl2-735/Update HT Index Module help doc

TAG: pwi-6-0-23-13
TAG: pwi-6-0-23-12
DATE: 02/08/2024
STAFF: lec
wts2-826/fl2-738/Change Marker Module search result sort order

TAG: pwi-6-0-23-11
TAG: pwi-6-0-23-10
DATE: 02/06/2024
STAFF: lec
wts2-1372/fl2-729/GXD Assay/spinning issue

TAG: pwi-6-0-23-9
DATE: 02/02/2024
STAFF: lec
wts2-1380/fl2-722/move Add Pane up next to Caption
wts2-1368/fl2-724/HT index module: display raw sample count

TAG: pwi-6-0-23-8
DATE: 01/29/2024
STAFF: lec
issue on Allele Variant module?

TAG: pwi-6-0-23-7
DATE: 01/24/2024
STAFF: lec
wts2-485/fl2-708/Feature request Variant module: batch query (TR13246)

TAG: pwi-6-0-23-6
TAG: pwi-6-0-23-5
DATE: 01/22/2024
STAFF: lec
wts2-485/fl2-707/Feature request Variant module: batch query (TR13246)

TAG: pwi-6-0-23-4
DATE: 01/19/2024
STAFF: lec
wts2-1373/fl2-706/CL browser: make links open in separate tab

TAG: pwi-6-0-23-3
DATE: 01/17/2024
STAFF: lec
wts2-1370/fl2-701/Autopopulate primer names

TAG: pwi-6-0-23-2
DATE: 01/16/2024
STAFF: lec
wts2-1367/flr-696/Adding a shortcut for 'Clear Partial' in probe module

TAG: pwi-6-0-23-1
DATE: 01/11/2024
STAFF: lec
fl2-627/Java 17 upgrade: Java API

TAG: pwi-6-0-22-90
DATE: 12/05/2023
STAFF: lec
wts2-511/flr-540/Variant Module: automate HGVS string creation/analysis

TAG: pwi-6-0-22-89
DATE: 11/08/2023
STAFF: jer
wts2-1317/fl2-613 prism enhancements

TAG: pwi-6-0-22-88
DATE: 11/04/2023
STAFF: lec
fl2-618/Reference error on PWI marker module

TAG: pwi-6-0-22-87
DATE: 11/03/2023
STAFF: lec