@@ -233,10 +233,6 @@
 							<div class="well well-sm">
 								<span data-ng-repeat="name in vm.selected.provider_contact_names">{{ name }}<font ng-show="!$last">, </font></span>
 							</div>
-							<label for="rawsamplecounts" class="label label-default">Raw Sample Count</label>
-							<div class="well well-sm">
-								<span data-ng-repeat="name in vm.selected.raw_sample_counts">{{ name }}<font ng-show="!$last">, </font></span>
-							</div>
 						</div>
 					</div>
 				</div>
