@@ -59,8 +59,6 @@ Experiments are moved to Public.</li>
 <li>Experimental Factor = as determined by ArrayExpress curators; not present in GEO.</li>
 <li>Experiment Type = raw value(s) as downloaded from ArrayExpress or GEO. Field can be searched using the pWI Custom Report: GXD HT Experiment Properties Search.</li>
 <li>Providers = name(s) of those who submitted the experiment to ArrayExpress. This information can be found in GEO but is not easily parsed (so we omitted it).</li>
-<li>Raw Sample Count = derived from the experiment file. In rare instances it will differ from the actual
-sample count, ie the number of samples actually loaded into the database.</li>
 </ul>
 
 <h5>Date Fields</h5>
